<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jnu.dns.tiah.wemakebeauty.views.SignUp"
    android:background="@drawable/background">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingTop="40dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:layout_marginLeft="55dp"
                    android:id="@+id/signup_et_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:text="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:layout_marginLeft="13dp"
                    android:id="@+id/signup_et_passwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView51"
                    android:text="@string/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:layout_marginLeft="13dp"
                    android:id="@+id/signup_et_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:text="@string/birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:layout_marginLeft="68dp"
                    android:id="@+id/signup_et_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" />


            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/selfie"
                    android:id="@+id/textView4" />

                <ImageView
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="fitXY"
                    android:id="@+id/signin_imgv_icon"
                    android:layout_width="210dp"
                    android:layout_height="175dp"
                    android:src="@drawable/signup_photo"

                    android:layout_gravity="center_vertical" />



            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="50dp">


                <ImageButton
                    android:background="@null"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/signup_ok"
                    android:layout_width="100dip"
                    android:layout_height="50dip"
                    android:id="@+id/signup_imgbtn_done" />

                <ImageButton
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/signup_cancel"
                    android:layout_width="100dip"
                    android:layout_height="50dip"
                    android:id="@+id/signup_imgbtn_cancel" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>
